overflow issue mobile

--- a/Portfolio/css/main.css
+++ b/Portfolio/css/main.css
@@ -9,10 +9,19 @@ body {
 	font-family: Chivo, sans-serif;
 	height: 100%;
 	width: 100%;
-	overflow: hidden;
+	overflow: hidden !important;
 	background-color: #F8F8F8;
 }
 
+html {
+	overflow: hidden;
+}
+
+.all {
+ 	overflow: hidden !important;
+	height: 100%;
+ 	position: fixed !important;
+ }
 
 /*HEADER*/
 
